align codestyle, remove incorrect hover and correct margin value

--- a/administrator/templates/atum/scss/blocks/_login.scss
+++ b/administrator/templates/atum/scss/blocks/_login.scss
@@ -91,10 +91,6 @@
   .input-password-toggle {
     border-color: var(--atum-bg-dark-80);
     box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.15);
-
-    &hover {
-      border-color: var(--atum-bg-dark-90);
-    }
   }
 
   .login-box {
