--- a/administrator/templates/atum/scss/blocks/_toolbar.scss
+++ b/administrator/templates/atum/scss/blocks/_toolbar.scss
@@ -1,5 +1,4 @@
 // Toolbar
-
 @import "../variables";
 
 .subhead {
@@ -25,16 +24,16 @@
     > * {
       margin-left: .75rem;
       box-shadow: $atum-box-shadow;
-      margin-bottom:10px;
+      margin-bottom: 10px;
 
       &:first-child {
         margin-left: 0;
       }
 
-      &.ml-auto{
-        @include media-breakpoint-down(md){
+      &.ml-auto {
+        @include media-breakpoint-down(md) {
           margin-right: auto !important;
-          margin-left:.75 !important;
+          margin-left: .75rem !important;
         }
       }
     }
