--- a/administrator/templates/atum/scss/pages/_com_cpanel.scss
+++ b/administrator/templates/atum/scss/pages/_com_cpanel.scss
@@ -92,7 +92,8 @@
       margin-bottom: 0;
     }
 
-    .list-group, .table {
+    .list-group,
+    .table {
       background-color: $white;
       box-shadow: $atum-box-shadow;
 
